Fixed emoji vertical align

--- a/src/styles/EmojiPicker.css
+++ b/src/styles/EmojiPicker.css
@@ -37,7 +37,7 @@
 }
 
 .emoji-mart-emoji {
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 button.emoji-mart-emoji {
